--- a/index.html
+++ b/index.html
@@ -16,21 +16,24 @@
 </head>
 
 <body>
-
- <!-- navigation code here -->
- <nav>
-  <a href="#">Home</a>
-  <a href="#">About Us</a>
-  <a href="#">Blog</a>
-  <a href="#">Contact</a>
-  <a href="#">Sign In</a>
- </nav>
-
+  <section id="navlogo">
+  <div class="logo">
+    <h1>SpaceWalkers</h1>
+  </div>
+  <nav>
+    <a href="#">Home</a>
+    <a href="#">About Us</a>
+    <a href="#">Blog</a>
+    <a href="#">Contact</a>
+    <a href="#">Sign In</a>
+  </nav>
+  </section>
   <div class="container home">
 
     <header class="intro">
-       <!-- image code here -->
-
+      <div class="header-img">
+        <img src="/img/main-header.png" alt="Main Header Image Sky"/>
+      </div>
       <h2>Lift Off</h2>
     
       <p>As we got further and further away, it [the Earth] diminished in size. Finally it shrank to the size of a marble, the most beautiful you can imagine. That beautiful, warm, living object looked so fragile, so delicate, that if you touched it with a finger it would fall apart. Seeing this has to change a man.</p>
